--- a/!project/style.css
+++ b/!project/style.css
@@ -1,6 +1,7 @@
 header {
   height: 100px;
   background: #eee;
+  overflow: hidden;
 }
 
 header a {
@@ -13,7 +14,7 @@ header a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 500px;
+    height: 1000px;
 }
 
 #headers {
@@ -41,33 +42,46 @@ header h1 {
     font-size: 30px;
 }
 
-main {
-  position: absolute;
-  background: #000;
-  z-index: 1;
-  width: 100%;
-  height: 250px;
-  margin: 100px;
-}
-
 .slide {
-  animation: slide 1s;
-  animation-fill-mode: forwards;
+  animation: slide .2s ease-in-out;
+  animation-fill-mode: both;
 }
 
 .slide-rev {
-  animation: slideRev 1s;
-  animation-fill-mode: backwards;
+  animation: slide-rev .2s ease-in-out;
+  animation-fill-mode: both;
 }
 
 @keyframes slide {
-  100% {transform: translateY(250px);}
+  0% {height: 100px;}
+  100% {height: 350px;}
 }
 
-@keyframes slideRev {
-  100% {transform: translateY(-250px)}
+@keyframes slide-rev {
+  0% {height: 350px;}
+  100% {height: 100px;}
 }
 
+main {
+  background-image: url('img/368-1.jpg');
+  background-size: cover;
+  height: 500px;
+  width: 100%;
+  animation: photos-switch 30s linear infinite forwards;
+  border: 5px solid #fff;
+  border-radius: 10px;
+  box-shadow: 1px 1px 1px #000;
+}
+
+@keyframes photos-switch {
+  0% {opacity: 0;}
+  10% {background-image: url('img/368-1.jpg'); opacity: 1;}
+  30% {opacity: 0;}
+  50% {background-image: url('img/368-2.jpg'); opacity: 1;}
+  70% {opacity: 0;}
+  90% {background-image: url('img/368-3.jpg'); opacity: 1;}
+  100% {background-image: url('img/368-3.jpg'); opacity: 0;}
+}
 
 /* HAMBURGER MENU */
 .menu {
