--- a/!project/style.css
+++ b/!project/style.css
@@ -1,20 +1,30 @@
+/* TEMPLATE */
+
+body {
+  padding: 0;
+}
+
+.container-fluid {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: auto;
+  max-width: 1000px;
+  padding: 0;
+}
+
+/* header */
+
 header {
   height: 100px;
-  background: #eee;
   overflow: hidden;
+  width: 100%;
 }
 
 header a {
     text-decoration: none;
     color: #000;
-}
-
-.container-fluid {
-    background-color: #eee;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 1000px;
 }
 
 #headers {
@@ -28,6 +38,8 @@ header h1, header h6 {
 header h1 {
   font-size: 40px;
 }
+
+/* slide menu */
 
 .menu-items {
     display: grid;
@@ -62,6 +74,83 @@ header h1 {
   100% {height: 100px;}
 }
 
+/* footer */
+footer {
+  background-color: #daa520;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  width: 100%;
+  align-self: flex-end;
+  flex-wrap: wrap;
+}
+
+.contact-icons {
+  justify-self: flex-end;
+}
+
+.fab, .fas {
+  transform: scale(300%, 300%);
+  margin: 20px;
+  transition-duration: .2s;
+}
+
+/* hambuger menu */
+.menu {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  padding: 0;
+
+  transform: scale(50%, 50%);
+  margin-top: -100px;
+  margin-right: 30px;
+}
+
+.line {
+  fill: none;
+  stroke: black;
+  stroke-width: 6;
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.line1 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+
+.line2 {
+  stroke-dasharray: 60 60;
+  stroke-width: 6;
+}
+
+.line3 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+
+.opened .line1 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
+
+.opened .line2 {
+  stroke-dasharray: 1 60;
+  stroke-dashoffset: -30;
+  stroke-width: 6;
+}
+
+.opened .line3 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
+
+/* //////////////////////////////////////////////////////////////////////*/
+
+/* HOMEPAGE */
 main {
   background-image: url('img/368-1.jpg');
   background-size: cover;
@@ -71,6 +160,7 @@ main {
   border: 5px solid #fff;
   border-radius: 10px;
   box-shadow: 1px 1px 1px #000;
+  margin-bottom: 50px;
 }
 
 @keyframes photos-switch {
@@ -82,56 +172,26 @@ main {
   90% {background-image: url('img/368-3.jpg'); opacity: 1;}
   100% {background-image: url('img/368-3.jpg'); opacity: 0;}
 }
-
-/* HAMBURGER MENU */
-.menu {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    display: flex;
-    padding: 0;
-
-    transform: scale(50%, 50%);
-    position: absolute;
-    right: -20px;
-    top: -25px;
-  }
-  .line {
-    fill: none;
-    stroke: black;
-    stroke-width: 6;
-    transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
-      stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .line1 {
-    stroke-dasharray: 60 207;
-    stroke-width: 6;
-  }
-  .line2 {
-    stroke-dasharray: 60 60;
-    stroke-width: 6;
-  }
-  .line3 {
-    stroke-dasharray: 60 207;
-    stroke-width: 6;
-  }
-  .opened .line1 {
-    stroke-dasharray: 90 207;
-    stroke-dashoffset: -134;
-    stroke-width: 6;
-  }
-  .opened .line2 {
-    stroke-dasharray: 1 60;
-    stroke-dashoffset: -30;
-    stroke-width: 6;
-  }
-  .opened .line3 {
-    stroke-dasharray: 90 207;
-    stroke-dashoffset: -134;
-    stroke-width: 6;
-  }
   
+/* //////////////////////////////////////////////////////////////////////////// */
 
+/* GALLERY */
+
+.gallery {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.gallery img {
+  width: 300px;
+  margin: 5px auto;
+  object-fit: cover;
+  border: 5px solid #fff;
+  border-radius: 10px;
+  box-shadow: 1px 1px 1px #000;
+  cursor: pointer;
+}
 
 @media screen and (max-width: 576px) {
     
