--- a/!project/style.css
+++ b/!project/style.css
@@ -183,14 +183,43 @@ main {
   flex-direction: column;
 }
 
-.gallery img {
-  width: 300px;
-  margin: 5px auto;
-  object-fit: cover;
+.gallery img, .photo-big {
   border: 5px solid #fff;
   border-radius: 10px;
   box-shadow: 1px 1px 1px #000;
   cursor: pointer;
+}
+
+.gallery img {
+  width: 300px;
+  margin: 5px auto;
+  object-fit: cover;
+}
+
+.photo-big {
+  width: 100%;
+  height: 400px;
+  background: #000;
+  position: fixed;
+  left: 0;
+  right: auto;
+  /* background-image: url('img/368-3.jpg'); */
+  background-size: cover;
+  visibility: hidden;
+}
+
+.bg-filter {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.show-big {
+  visibility: visible;
+  animation: show-big 1s both;
+}
+
+@keyframes show-big {
+  0% {visibility: hidden}
+  100% {visibility: visible}
 }
 
 @media screen and (max-width: 576px) {
