--- a/!project/style.css
+++ b/!project/style.css
@@ -17,7 +17,7 @@ body {
   border-left: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
   border-right: 1px solid #ccc;
-  margin: 10px 0px;
+  margin-bottom: 10px;
 }
 
 .container-fluid a:hover {
@@ -74,6 +74,8 @@ header h1 {
     height: 0px;
     width: 100%;
     justify-self: stretch;
+    border-top: 3px solid #ccc;
+    border-bottom: 3px solid #ccc;
 }
 
 .menu-items a {
@@ -251,13 +253,16 @@ main {
 
 .photo-big {
   width: 100%;
-  height: 400px;
+  height: 500px;
   background: #000;
   position: fixed;
   left: 0;
+  top: 15px;
   right: auto;
   background-size: cover;
   visibility: hidden;
+  align-self: center;
+  background-position: center;
 }
 
 .bg-filter {
@@ -292,13 +297,15 @@ main {
   margin-bottom: 30px;
 }
 
-@media screen and (min-width: 576px) {
-  #headers h1, #lesser-headers {
-    transform: scale(125%, 125%);
-  }
+/* ////////////////////////////////////////////////// */
 
+@media screen and (min-width: 576px) {
   main {
     height: 600px;
+  }
+
+  .photo-big {
+    height: 700px;
   }
 }
 
@@ -339,9 +346,29 @@ main {
   .gallery img {
     width: 100%;
   }
+
+  .photo-big {
+    background-position: top;
+  }
 }
 
+/* ////////////////////////////////////////////////////// */
+
 @media screen and (min-width: 992px) {
+  header {
+    grid-template-columns: 10% 40% 0% 50%;
+    height: 100px;
+  }
+
+  .contact-header {
+    flex-direction: row;
+  }
+
+  .menu-items {
+    grid-column: 3 / 5;
+    height: 80px;
+  }
+
   .gallery {
     display: grid;
     grid-template-columns: 30% 30% 30%;
@@ -355,4 +382,10 @@ main {
   .list {
     width: 400px;
   }
+}
+
+/* ////////////////////////////////////////////////////////////// */
+
+@media screen and (min-width: 1200px) {
+  
 }
