--- a/!project/style.css
+++ b/!project/style.css
@@ -413,11 +413,11 @@ article h2, .event h3 {
 
   .homepage {
     display: flex;
+    width: 900px;
+    justify-content: space-between;
   }
 
   main {
-    background-size: contain;
-    background-repeat: no-repeat;
     height: 650px;
   }
 
@@ -425,8 +425,23 @@ article h2, .event h3 {
     flex-direction: column;
   }
 
+  article h2 {
+    width: 400px;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+
+  .events {
+    align-self: center;
+  }
+
+  .event {
+    margin-bottom: 50px;
+  }
+
+  /* GALLERY & PRICELIST */
+
   .gallery {
-    display: grid;
     grid-template-columns: 30% 30% 30%;
     justify-self: center;
   }
@@ -438,10 +453,27 @@ article h2, .event h3 {
   .list {
     width: 400px;
   }
+
+  /* ABOUT */
+
+  .about {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 300px 300px;
+    margin-bottom: 80px;
+  }
+
+  .about p {
+    grid-row: 1 / 3;
+    padding: 10px;
+  }
+
 }
 
 /* ////////////////////////////////////////////////////////////// */
 
 @media screen and (min-width: 1200px) {
-  
+  .gallery {
+    grid-template-columns: 25% 25% 25% 25%;
+  }
 }
