--- a/!project/style.css
+++ b/!project/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .container-fluid {
-  background-color: #fff;
+  background-color: #fdfdfd;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -74,13 +74,11 @@ header h1 {
     text-align: center;
     height: 0px;
     width: 100%;
-    justify-self: stretch;
     border-top: 3px solid #ccc;
     border-bottom: 3px solid #ccc;
 }
 
 .menu-items a {
-    /* border: 1px solid #daa520; */
     background-color: #efefef;
     padding: 5px;
     font-size: 30px;
